# drum-machine

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  SOUNDS_LICENSING.md  drum-machine.doap  io.github.revisto.DrumMachine.json  io.github.revisto.drum-machine.json  lol.revisto.DrumMachine.json  meson.build  pyproject.toml  python-dependencies.json  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
data/: io.github.revisto.DrumMachine.desktop.in  io.github.revisto.DrumMachine.gschema.xml  io.github.revisto.DrumMachine.metainfo.xml.in  io.github.revisto.drum-machine.desktop.in  io.github.revisto.drum-machine.gschema.xml  io.github.revisto.drum-machine.metainfo.xml.in  lol.revisto.DrumMachine.desktop.in  lol.revisto.DrumMachine.gschema.xml  lol.revisto.DrumMachine.metainfo.xml.in  meson.build
data/drumkit/: meson.build
data/icons/: meson.build
data/patterns/: Boom Boom.mid  Chill.mid  Night.mid  Shoot.mid  Slow.mid  meson.build
data/presets/: Boom Boom.mid  Chill.mid  Maybe Rock.mid  Night.mid  Rock.mid  Shoot.mid  Slow.mid  meson.build
po/: LINGUAS  POTFILES  POTFILES.in  bg.po  ca.po  de.po  drum-machine.pot  el.po  en.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  he.po  hu.po  it.po  ka.po  kk.po  meson.build  nb.po  nl.po  pt.po  pt_BR.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  uz.po  vi.po  zh_CN.po
requirements/: base.txt  local.txt
snap/: snapcraft.yaml
src/: __init__.py  application.py  config.py  drum-machine.gresource.xml  drum-machine.in  main.py  meson.build  style-dark.css  style.css  window.py  window.ui
src/config/: constants.py  export_formats.py  meson.build
src/dialogs/: audio_export_dialog.py  audio_export_progress_dialog.py  meson.build  midi_mapping_dialog.py  random_beats_dialog.py  reset_defaults_dialog.py  save_changes_dialog.py
src/gtk/: audio-export-dialog.blp  audio-export-dialog.ui  audio-export-progress-dialog.ui  help-overlay.blp  help-overlay.ui  random-beats-dialog.ui  reset-defaults-dialog.blp  save-changes-dialog.blp  save_changes_dialog.ui  shortcuts-dialog.blp
src/handlers/: drag_drop_handler.py  file_dialog_handler.py  meson.build  window_actions.py
src/interfaces/: meson.build  player.py  randomizer.py  sound.py
src/models/: drum_part.py  meson.build
src/services/: audio_export_service.py  audio_renderer.py  drum_machine_service.py  drum_part_manager.py  file_encoder.py  meson.build  pattern_service.py  preset_service.py  randomization_service.py  save_changes_service.py  sound_service.py  ui_helper.py
src/ui/: drum_grid_builder.py  meson.build
src/utils/: export_progress.py  meson.build  name_utils.py
tests/: conftest.py  test_infrastructure.py
