drumkit_dir = meson.current_source_dir()

drumkit_files = [
  'kick.wav',
  'kick-2.wav',
  'kick-3.wav',
  'snare.wav',
  'snare-2.wav',
  'hihat.wav',
  'hihat-2.wav',
  'clap.wav',
  'tom.wav',
  'crash.wav',
]

install_data(drumkit_files, install_dir: get_option('datadir') / 'drum-machine' / 'data' / 'drumkit')