drumkit_dir = meson.current_source_dir()

drumkit_files = [
  'kick.wav',
  'snare.wav',
  'hihat-1.wav',
  'hihat-2.wav',
  'hihat-3.wav',
  'tom-1.wav',
  'tom-2.wav',
  'tom-3.wav',
  'crash-1.wav',
  'crash-2.wav',
]

install_data(drumkit_files, install_dir: get_option('datadir') / 'drum-machine' / 'data' / 'drumkit')