modulesubdir = join_paths(moduledir, 'services')

services_sources = [
    'drum_machine_service.py',
    'drum_part_manager.py',
    'sound_service.py',
    'audio_export_service.py',
    'audio_renderer.py',
    'file_encoder.py',
    'ui_helper.py',
    'preset_service.py',
    'save_changes_service.py',
]

install_data(services_sources, install_dir: modulesubdir)